--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"dependencies":
-	{
-		"socket.io": ">= 1.4.8",
-		"nodemailer": ">= 2.5"
+	"dependencies": {
+		"socket.io": ">= 2.3",
+		"nodemailer": ">= 6.4.2"
 	},
 	"license": "UNLICENSED",
-	"repository":
-	{
+	"scripts": {
+		"start": "node ./js/mail-sender.js"
+	},
+	"repository": {
 		"type": "git",
 		"url": "https://github.com/CheshireCatNick/cheshirecatnick.github.io"
 	}
