--- a/config.js.example
+++ b/config.js.example
@@ -2,5 +2,7 @@ module.exports = {
     host: 'localhost',
     port: 8888,
     account: '',
-    password: ''
-}
+    password: '',
+    certFile: '',
+    privateKeyFile: ''
+};
