--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
-		"socket.io": ">= 2.3",
-		"nodemailer": ">= 6.4.2"
+		"nodemailer": ">= 6.4.2",
+		"socket.io": ">= 2.3"
 	},
 	"license": "UNLICENSED",
 	"scripts": {
